[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vtoa"
version = "0.1.0"
description = "Convert any video to ASCII art playable in your terminal"
authors = [{name = "Tanmay Sachan", email = "tnmysachan@gmail.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["video", "ascii", "terminal", "cli", "art"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Artistic Software",
]
dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.19.0",
    "yt-dlp>=2023.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
vtoa = "vtoa.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/vtoa"
Repository = "https://github.com/yourusername/vtoa"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]

